# tgr2

./: Cargo.toml
src/: app.rs  camera2d.rs  color.rs  cross.rs  draw.rs  engine.rs  info.rs  lib.rs  module.rs  object.rs  object2d.rs  object3d.rs  render.rs  shader.rs  shape.rs
src/object/: mod.rs  obj3d.rs
src/render/: mod.rs  wgpu.rs  window.rs
test/: test.rs
