[package]
name = "tgr2"
version = "0.1.0"
edition = "2024"

# Тесты
[[bin]]
name = "test"
path = "test/test.rs"


# Зависимости
[dependencies]
glam = "0.30.5"
hashbrown = "0.15.5"
miniquad = "0.4.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11.0"


# Режим для разработчиков
[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3


# Режим для релиза
[profile.release]
lto = true
panic = "abort"
debug = false
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
